--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,10 @@
 version : 2
-  
+jobs:
+  build:
+    docker:
+      - image: circleci/sysfoo
   override:
     - mvn package
  checkout:
-  post:
+   post:
     - mv target/*.war $CIRCLE_ARTIFACTS/
